# cpu_hdd_maxxer

./: Cargo.toml  README.md
src/: config.rs  cpu_stress.rs  disk_ops.rs  main.rs
src/utils/: mod.rs  monitor.rs  patterns.rs
