[package]
name = "disk-stress-test"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.36", features = ["full"] }
crossbeam = "0.8"
memmap2 = "0.9"
rand = "0.8"
crc32fast = "1.3"
num_cpus = "1.16"
thiserror = "1.0"
ctrlc = "3.4"